removed extra package-lock.json file and added base href in index.html for correct routing. Also added margin-bottom to input component for better spacing.

--- a/chatbot-project/src/components/input-component.css
+++ b/chatbot-project/src/components/input-component.css
@@ -21,6 +21,7 @@
       }
       .input-component{
         display: flex;
+        margin-bottom: 12px;
        
        
         
